--- a/flask-app/application/templates/modals/user/user_add.html
+++ b/flask-app/application/templates/modals/user/user_add.html
@@ -20,7 +20,7 @@
                 <option value="contributor">Contributor</option>
                 <option value="manager">Manager</option>
                 <option value="viewer">Viewer</option>
-                <option value="disabled">Disabled</option>
+                <option value="locked">Locked</option>
               </select>
           </div>
         </div>
