--- a/flask-app/application/templates/modals/user/user_update.html
+++ b/flask-app/application/templates/modals/user/user_update.html
@@ -23,6 +23,7 @@
                 <option value="contributor">Contributor</option>
                 <option value="manager">Manager</option>
                 <option value="viewer">Viewer</option>
+                <option value="locked">Locked</option>
                 <option value="disabled">Disabled</option>
               </select>
           </div>
