--- a/flask-app/application/templates/modals/edit-scopenote.html
+++ b/flask-app/application/templates/modals/edit-scopenote.html
@@ -39,7 +39,14 @@
       </div>
       <div class="modal-footer">
 
-        <!-- TODO -->
+        <div class="form-group mr-auto">
+          <div class="custom-control custom-checkbox">
+            <input type="checkbox" class="custom-control-input"
+                   id="editScopeNote-force" name="scnt_update_force">
+            <label class="custom-control-label"
+            for="editScopeNote-force">Force update ?</label>
+          </div>
+        </div>        
 
         <button type="button" class="btn btn-link ml-3" data-dismiss="modal">Close</button>
 
