--- a/flask-app/application/templates/manage.html
+++ b/flask-app/application/templates/manage.html
@@ -224,7 +224,7 @@ Manage
     
     <ul class="list-inline mb-2">
       <li class="list-inline-item">
-        <h4>MARC21 Exports</h4>
+        <h4>MARC21</h4>
       </li>
       <li class="list-inline-item float-right">
       </li>
