--- a/flask-app/application/static/css/custom.css
+++ b/flask-app/application/static/css/custom.css
@@ -8,7 +8,6 @@ body {
   opacity: 0.3;
 }
 
-
 .mtw-spacelab-body {
   font-size: 95%;
 }
@@ -26,8 +25,8 @@ body {
 }
 
 #notes dd {
-    padding-right: 0px;
-    padding-left: 0px;
+    padding-right: 0;
+    padding-left: 0;
 }
 
 .nav-link {
@@ -73,14 +72,9 @@ pre {
   font-size: 1.5rem;
 }
 
-.mtw-stats-todo {
-  /* text-decoration: underline; */
-}
-
 .mtw-stats-link-flatly {
   color: #3399F3;
 }
-
 
 progress {
   height: 16px;
@@ -98,7 +92,7 @@ progress {
 progress::-webkit-progress-bar {
 	background: gray;
 	border-radius: 0.25rem;
-	/*box-shadow: 0 1px 0px 0 rgba(255, 255, 255, 0.2);*/
+	/*box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.2);*/
 }
 progress::-webkit-progress-value {
   background: LimeGreen;
@@ -106,27 +100,22 @@ progress::-webkit-progress-value {
   border-bottom-left-radius: 0.25rem;
   /*box-shadow: inset 0 1px 1px 0 rgba(255, 255, 255, 0.4);*/
 }
-progress::-moz-progress-bar {
-  /* style rules */
-}
-
 
 /* Sticky footer styles */
 html {
   position: relative;
   min-height: 100%;
 }
+
 body {
   margin-bottom: 60px;
 }
+
 .footer {
   position: absolute;
   bottom: 0;
   height: 30px;
   /*background-color: #f5f5f5;  */
-}
-.footer .container-fluid {
-  /*background-color: #f5f5f5;   */
 }
 
 .footer p {
