--- a/flask-app/application/templates/snips/audit-log.html
+++ b/flask-app/application/templates/snips/audit-log.html
@@ -19,7 +19,7 @@
           {% endfor %}
           </select>
           <div class="input-group-append">
-            <button class="btn btn-secondary btn-sm" type="submit" title="Change target year" aria-label="Change target year">
+            <button class="btn btn-secondary btn-sm" type="submit" title="Select target year">
               <i class="fas fa-filter"></i>
             </button>
             <a class="btn btn-primary btn-sm" href="{{ url_for('audit', dui=dui) }}"
