--- a/flask-app/application/templates/snips/audit-show.html
+++ b/flask-app/application/templates/snips/audit-show.html
@@ -1,18 +1,16 @@
 {% if item.resolvedby and item.resolvedby != 'None' %}
    {% set resby = ' - ' + item.resolvedby %}
 {% endif %}
-
 {% if item.otype == 'concept' %}
    {% set cui = item.opid %}
 {% endif %}
-
 <a href="#" class="pb-2"
-data-toggle="modal" data-target="#showHistoryModal" data-backlink="{{ backlink }}"
-data-updated="{{ item.updated|replace('T', ' ') }}" data-event="{{ item.event }}"
-data-tstate="{{ item.tstate }}" data-apid="{{ item.apid }}"
-data-resolvedby="{{ item.username }} {{ resby }}" data-note="{{ item.note }}" data-cui="{{ cui }}" data-dui="{{ item.dui }}"
-data-params="
-{% if item.event == 'insert_concept' %}
+data-toggle="modal" data-target="#showHistoryModal" 
+data-apid="{{ item.apid }}" data-backlink="{{ backlink }}" data-cui="{{ cui }}" data-dui="{{ item.dui }}" 
+data-event="{{ item.event }}" data-note="{{ item.note }}" data-resolvedby="{{ item.username }} {{ resby }}" 
+data-rstate="{{ get_statusRep(item.tstate) }}" data-tstate="{{ item.tstate }}" 
+data-updated="{{ item.updated | replace('T', ' ') }}" 
+data-params="{% if item.event == 'insert_concept' %}
 notrx : {{ item.params.new.ntx }}
 active: {{ item.params.new.active }}
 rels  : {{ item.params.new.rel }}
@@ -34,31 +32,29 @@ rels  : {{ item.params.old.rel }} => {{ item.params.new.rel }}
 tnote-new: {{ item.params.new.tnote }}
 tnote-old: {{ item.params.old.tnote }}
   {% endif %}
-{% endif %}
-"
-data-terms-old="
-{% if item.event in ['update_concept','delete_concept','purge_concept','set_notrx'] %}
+{% endif %}" data-terms-old="{% if item.event in ['update_concept','delete_concept','purge_concept','set_notrx'] %}
  {% for term in item.params.old.terms %}
 {{ term.prefLabel }} {{ term.lexicalTag }}
  {% endfor %}
-{% endif %}
-"
-data-terms-new="
-{% if item.event in ['insert_concept','update_concept','purge_concept'] %}
+{% endif %}" data-terms-new="{% if item.event in ['insert_concept','update_concept','purge_concept'] %}
  {% for term in item.params.new.terms %}
 {{ term.prefLabel }} {{ term.lexicalTag }}
  {% endfor %}
-{% endif %}
-"
+{% endif %}"
 {% if item.event in ['insert_scopeNote','update_scopeNote','delete_scopeNote','delete_note','insert_note','update_note'] %}
-data-scn-old="{{ item.params.old }}"
-data-scn-new="{{ item.params.new }}"
+ data-scn-old="{{ item.params.old }}"
+ data-scn-new="{{ item.params.new }}"
 {% endif %}
 {% if item.event in ['insert_scopeNoteTrx','update_scopeNoteTrx','delete_scopeNoteTrx'] %}
-data-scnt-old="{{ item.params.old }}"
-data-scnt-new="{{ item.params.new }}"
+ data-scnt-old="{{ item.params.old }}"
+ data-scnt-new="{{ item.params.new }}"
 {% endif %}
-data-label="{{ item.label }}" data-detail="{{ item.detail }}">
-
-<span class="text-{{ get_statusRep(item.tstate) }}">{{ item.label|truncate(50, True) }} : {{ item.detail|truncate(50, True) }}</span>
+ data-label="{{ item.label }}" data-detail="{{ item.detail }}">
+{% if item.tstate == 'unlocked' %}
+<span class="text">
+{% else %}
+<span class="text-{{ get_statusRep(item.tstate) }}">
+{% endif %}
+  {{ item.label | truncate(50, True) }} : {{ item.detail | truncate(50, True) }}
+</span>
 </a>
