--- a/flask-app/application/static/css/custom.css
+++ b/flask-app/application/static/css/custom.css
@@ -94,8 +94,9 @@ progress::-webkit-progress-bar {
 	border-radius: 0.25rem;
 	/*box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.2);*/
 }
+
 progress::-webkit-progress-value {
-  background: LimeGreen;
+  background: limegreen;
   border-top-left-radius: 0.25rem;
   border-bottom-left-radius: 0.25rem;
   /*box-shadow: inset 0 1px 1px 0 rgba(255, 255, 255, 0.4);*/
