--- a/flask-app/application/templates/snips/descriptor.html
+++ b/flask-app/application/templates/snips/descriptor.html
@@ -16,10 +16,9 @@
         {% set tab_concepts = 'active show' %}
     {% endif %}
 
-
-<ul class="list-inline mb-2">
-  <li class="list-inline-item mt-2">
-    <h4>{{ descriptor['labels']['en'] }} </h4>
+<ul class="list-inline mb-3">
+  <li class="list-inline-item">
+    <h4>{{ descriptor['labels']['en'] }}</h4>
     <!-- <h4 class="text-success">{{ descriptor['labels']['target'] }}</h4> -->
   </li>
   <li class="list-inline-item float-right">
