--- a/flask-app/application/templates/snips/concepts.html
+++ b/flask-app/application/templates/snips/concepts.html
@@ -12,7 +12,7 @@
       <ul class="list-unstyled {{ c_class }}">
           {% if item['ntx'] %}
             {% set item_text = 'text-warning' %}
-          {% elif item['active'] == 'false'  %}
+          {% elif item.get('active') == 'false' %}
             {% set item_text = 'text-danger' %}
           {% else %}
             {% set item_text = 'text-muted' %}
@@ -33,7 +33,7 @@
 
           {% elif item['status'] == 'OK' %}
 
-            {% if not item.get('cpid') and item.get('tnote') and session.ugroup in ['admin'] and item.get('active') == 'true' %}
+            {% if not item.get('cpid') and item.get('tnote') and session.ugroup in ['admin'] and item.get('active', 'true') == 'true' %}
 
             <a href="{{ url_for('add_cpid', dui=dui, cui=item['cui']) }}">
               <button type="link" class="btn btn-primary btn-sm ml-1" title="Generate custom CUI">
@@ -53,31 +53,36 @@
           {% if item['scn'] and item['scnt'] %}
           <button type="button" class="btn btn-primary btn-sm ml-1" title="Edit ScopeNote"
                   data-toggle="modal" data-target="#editScopeNote"
-                  data-cpid="{{ item['cpid'] }}" data-label="{{ item['label']|truncate(50, True) }}" data-concept="{{ item['rc'] }}" data-active="{{ item['active'] }}"
+                  data-cpid="{{ item['cpid'] }}" data-label="{{ item['label']|truncate(50, True) }}" data-concept="{{ item['rc'] }}"
+                  data-active="{{ item.get('active', 'true') }}"
                   data-scn="{{ item['scn'] }}" data-scnt="{{ item['scnt'] }}">
             <i class="fas fa-sticky-note text-success"></i></button>
           {% elif item['scn'] %}
           <button type="button" class="btn btn-primary btn-sm ml-1" title="Add Translated ScopeNote"
                   data-toggle="modal" data-target="#editScopeNote"
-                  data-cpid="{{ item['cpid'] }}" data-label="{{ item['label']|truncate(50, True) }}" data-concept="{{ item['rc'] }}" data-active="{{ item['active'] }}"
+                  data-cpid="{{ item['cpid'] }}" data-label="{{ item['label']|truncate(50, True) }}" data-concept="{{ item['rc'] }}"
+                  data-active="{{ item.get('active', 'true') }}"
                   data-scn="{{ item['scn'] }}" data-scnt="">
             <i class="fas fa-sticky-note text-info"></i></button>
           {% elif item['scne'] and item['scnt'] %}
           <button type="button" class="btn btn-primary btn-sm ml-1" title="Edit ScopeNotes"
                   data-toggle="modal" data-target="#editScopeNote" data-enable="scn"
-                  data-cpid="{{ item['cpid'] }}" data-label="{{ item['label']|truncate(50, True) }}" data-concept="{{ item['rc'] }}" data-active="{{ item['active'] }}"
+                  data-cpid="{{ item['cpid'] }}" data-label="{{ item['label']|truncate(50, True) }}" data-concept="{{ item['rc'] }}"
+                  data-active="{{ item.get('active', 'true') }}"
                   data-scne="{{ item['scne'] }}" data-scnt="{{ item['scnt'] }}">
             <i class="fas fa-sticky-note text-success"></i></button>
           {% elif item['scnt']  %}
           <button type="button" class="btn btn-primary btn-sm ml-1" title="Add English ScopeNote"
                   data-toggle="modal" data-target="#editScopeNote" data-enable="scn"
-                  data-cpid="{{ item['cpid'] }}" data-label="{{ item['label']|truncate(50, True) }}" data-concept="{{ item['rc'] }}" data-active="{{ item['active'] }}"
+                  data-cpid="{{ item['cpid'] }}" data-label="{{ item['label']|truncate(50, True) }}" data-concept="{{ item['rc'] }}"
+                  data-active="{{ item.get('active', 'true') }}"
                   data-scne="" data-scnt="{{ item['scnt'] }}">
             <i class="fas fa-sticky-note text-warning"></i></button>
           {% elif item['scne']  %}
           <button type="button" class="btn btn-primary btn-sm ml-1" title="Add Translated ScopeNote"
                   data-toggle="modal" data-target="#editScopeNote" data-enable="scn"
-                  data-cpid="{{ item['cpid'] }}" data-label="{{ item['label']|truncate(50, True) }}" data-concept="{{ item['rc'] }}" data-active="{{ item['active'] }}"
+                  data-cpid="{{ item['cpid'] }}" data-label="{{ item['label']|truncate(50, True) }}" data-concept="{{ item['rc'] }}"
+                  data-active="{{ item.get('active', 'true') }}"
                   data-scne="{{ item['scne'] }}" data-scnt="">
             <i class="fas fa-sticky-note text-info"></i></button>
 
@@ -86,7 +91,8 @@
             {% if item['status'] == 'OK' and item['lang'] == config.TARGET_LANG %}
             <button type="button" class="btn btn-primary btn-sm ml-1" title="Add ScopeNotes"
                   data-toggle="modal" data-target="#editScopeNote" data-enable="scn"
-                  data-cpid="{{ item['cpid'] }}" data-label="{{ item['label']|truncate(50, True) }}" data-concept="{{ item['rc'] }}" data-active="{{ item['active'] }}"
+                  data-cpid="{{ item['cpid'] }}" data-label="{{ item['label']|truncate(50, True) }}" data-concept="{{ item['rc'] }}"
+                  data-active="{{ item.get('active', 'true') }}"
                   data-scne="" data-scnt="">
             <i class="fas fa-sticky-note"></i></button>
             {% endif %}
