--- a/flask-app/application/templates/manage.html
+++ b/flask-app/application/templates/manage.html
@@ -581,9 +581,9 @@ Manage
 
     <div class="row mb-3">
       <div class="col">
-        <h5>Training CSV <small class="text-info">[to be processed into key value pairs]</small></h5>
+        <h5>Training base CSV <small class="text-info">[to be processed into key value pairs]</small></h5>
 
-          <form action="{{ url_for('update_stats', stat='training') }}" method="post">
+          <form action="{{ url_for('update_stats', stat='training_base') }}" method="post">
             <input type="hidden" name="_csrf_token" value="{{ csrf_token() }}">
 
             {% if exports['training_csv'] %}
